re PR rtl-optimization/61772 (RTL if-conversion removes asm volatile goto)

PR rtl-optimization/61772
        * ifcvt.c (dead_or_predicable): Check jump to be free of side
        effects.

testsuite/
        * gcc.dg/torture/pr61772.c: New test.

From-SVN: r212563