gcc/ifcvt.c
@@ -4138,6 +4138,8 @@ dead_or_predicable (basic_block test_bb, basic_block merge_bb,
 
   if (JUMP_P (end))
     {
+      if (!onlyjump_p (end))
+	return FALSE;
       if (head == end)
 	{
 	  head = end = NULL_RTX;
